more edits to intro, 85% done

--- a/chap3.tex
+++ b/chap3.tex
@@ -1152,6 +1152,20 @@ come to be more socially acceptable in certain ways---notably, in
 terms of autonomy and ethics. Furthermore, as I have stated
 repeatedly, complete autonomy is fundamentally a chimera.
 
+http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/
+``Urmson said Google believes that while technology that assists drivers
+can help reduce some accidents, only completely self-driving cars will
+fully address safety concerns. One reason, he said, is that the better
+the assistive technology gets, the more risks human drivers will
+take.''
+``Nor, he said, will today’s driver-assist technologies just evolve to
+become fully self-driving cars on their own.
+
+“That’s like me saying if I work really hard at jumping, one day I
+will be able to fly,” he said.''
+--> he is right that driver assistance tech won't just become
+driverless, but wrongly assumes driverless is the only reasonable end goal.
+
 %% 3) situate the moonshot approach (which may actually be easier in some
 %% senses but less socially acceptable) and the mixed approach in a way
 %% that does not support a teleology of autonomous vehicle development
