--- a/intro.tex
+++ b/intro.tex
@@ -445,11 +445,31 @@ or Google's ``moonshot'' approach will triumph: the implicit
 assumption is that everyone is headed for the same technological
 goals, the same ultimate type of device.
 
-the CES 2015 vision, glitzy
---contrast with 1950s ad: non-obvious differences here, even what we
-think we will USE these cars for has changed (family to work)
+At the Consumer Electronics Show in Las Vegas, in January
+2015, visions of the driverless car stood front and center. Prototypes
+and concepts at CES worked glitz and glamour into the dream of a
+driverless future. Mercedes-Benz's F015 autonomous car
+concept forgoes the traditional seating arrangement in favor of
+rotating chairs that turn the center of the car into a lounge or
+meeting space.\cite{???} The car's side windows are relatively minimal, its
+doors taken up primarily by touch screens. In fact, the interior is
+covered in touchable displays, set up for an immersive digital
+experience. But beneath this shiny media exterior sits a relatively
+unglamorous purpose:  its publicity photos show serious-looking, young white
+businesspeople in uniform grey work clothing.\cite{???} The environment is
+high tech and sharply clinical. Far from an exuberant depiction of the
+promise of media technology in the automobile, this future is so
+serious as to be dull: a homogeneous work space bleeding out into
+other parts of life. Compared to America's Electric Light and Power
+Companies' ad from the 1950s, where the car was a space for idyllic,
+family life, what we think we will use these prospective vehicles for
+has changed to the point where productivity is the stated or unstated
+goal. Our assumptions have changed with relatively little
+investigation into why, but continue to be the background of both
+optimistic and pessimistic viewpoints.
 
-One popular vision of this technology focuses on the future: the
+One popular vision of this technology is fundamentally optimistic: it
+puts forward the
 idea that these vehicles will be commercially available in as little
 as five years, and that in just two decades the majority of cars on the road will be
 fully autonomous. Even respected business information and consulting
@@ -462,15 +482,21 @@ watch a movie, answer emails, or otherwise occupy themselves without
 needing to pay any attention to the operation of the vehicle. While this
 vision has its benefits, it makes many people nervous about
 ceding their driving agency to a computer system, especially on such a
-potentially short timescale.\cite{clytton}
-Forbes article about Google's 5-year plan
---marketed w/o steering wheels
---outlaw drivers
---that these vehicles would operate on public roadways (which is NOT
-stated here, and probably not true on this timescale, but seems
-implied)
--in this vision, the law just needs to get out of the way, and
-everyone's life could improve
+potentially short timescale.\cite{clytton} Google's Chris Urmson is
+still claiming that self-driving cars will be available in 5 years (a
+claim first made in August, 2014, a personal goal based on when his
+eldest son can get his license\cite{???-GomesHidden}), and expects
+these vehicles not to have steering wheels or the possibility of human
+control. That these vehicles would operate on public roadways is not
+stated explicitly---and seems optimistic given the speed of regulation
+alone---but is implied in these kinds of statements. Elon Musk expects
+that once sufficiently capable vehicles 
+come to market, human drivers may be
+outlawed.\cite{???-http://www.forbes.com/sites/leoking/2015/03/19/googles-gargantuan-push-for-cars-with-no-steering-wheel-by-2020/}.
+In this vision, the technology is ready, and law and policy need to
+adapt. ``Robots can already outdrive humans,'' this view says, ``now
+everyone needs to get out of the way''
+\cite{???-http://www.popsci.com/cars/article/2013-09/google-self-driving-car}. 
 
 %% 2) deal in general with some of the popular portrayals of the
 %% technology:  (4 p)
@@ -479,18 +505,38 @@ everyone's life could improve
 %% ---but this is a flawed picture of the future, and an incomplete
 %% picture of the tech
 
->Another is that there are big problems to be solved, the technology
->isn't there
--questions of safety? legality? insurance?
--both suggest moral /ethical/legal quandaries
+However, another common viewpoint is that there are big problems to be
+solved, and the technology isn't ready yet, whatever Urmson and Google
+say. Questions of safety, legality, and insurance cast doubts on this
+sort of optimistic timescale. Moral and ethical
+quandaries---driverless car ``trolley problems''---question how
+autonomous machines will respond to unusual situations and whether
+people will accept those responses. Would american freedom rhetoric
+allow the outlawing of human drivers \cite{???-http://www.washingtonpost.com/blogs/wonkblog/wp/2015/03/18/should-we-outlaw-human-drivers-in-a-world-of-driverless-cars/}? 
+Perhaps not. 
 --would we accept a computer that kills 3000 to save 30000 that we
 >kill?
+--http://www.businessinsider.com/bill-gurley-is-skeptical-of-driverless-cars-2015-3
+--http://www.washingtonpost.com/blogs/innovations/wp/2015/03/16/driverless-cars-a-tremendous-innovation-with-a-glaring-achilles-heel/
+And soundbites from very respected autonomy researchers are used to
+support this view: notably John Leonard, one of the researchers who
+worked on MIT's entrant to the DARPA Urban Challenge\cite{???}.
 
-HOWEVER nobody (popularly) seems to dispute what the object is that is
+excused for thinking this was just an argument between the
+technophiles and naysayers, the daring dreamers versus the
+conservative pragmatists. But there is much more to the story.
+Both popular visions of this technology focus on the future, and do
+relatively little to investigate the past or present, how we got to
+where we are now, or even what level of autonomy we currently see in
+our vehicles. 
+HOWEVER, few people seem to dispute what the object is that is
 >being discussed, or how else it might look. both these narratives
 >tend to take a particular technological picture and either support it
 >or illustrate its problems
->idea that ''if you are asked to take control, we've failed'' as a culture of developers
+>idea that ''if you are asked to take control, we've failed'' as a
+culture of developers, more than just a risk-mitigation strategy (as
+we will see, this view doesn't necessarily hold together given
+historical examples)
 
 however, the nature of the self-driving car as it will appear in
 the near future is not self-evident, no matter how loud Google's voice
@@ -500,9 +546,6 @@ or how large their investment.
 %CMS801 final paper! 
 
 3) and shift to the lead-in to the main thesis sections: 
-KEY QUESTIONS: What are the stories we are hearing vs. Other ones out
-there, why? and what are the stakes for these stories?
-
 these technologies or visions of them enact certain ideologically charged
 activities (through their epistemologies; or even to some extent
 ontological position of a self-driving car that ``knows'' nothing);
@@ -510,6 +553,15 @@ and that these can be traced through the histories and current
 discourses of the fields involved, and might lead us to expect very
 different social/cultural impacts (2 p)
 
+KEY QUESTIONS: 
+1) What are the stories we are hearing? 
+2) Where do they come from?
+3) What are the stakes for these stories?
+4) What are other ones out there, why aren't they so heard? and 
+5) Where do we go from here? What understandings need to change to
+make the broader picture comprehensible?
+
+Fundamentally:
 **What can I disprove?
 I can disprove that this conventional story is right, true, and the
 only story to tell.**
