new edits to intro, 90% done

--- a/chap3.tex
+++ b/chap3.tex
@@ -1252,7 +1252,7 @@ all this, we should avoid the clich\'{e}d question ``People: sinners
 or saints?'' which seems so popular in media discussions: it represents
 a ``false position'' that does not adequately reflect the complex
 nature of operating automated
-systems\cite[p. ??]{???-woods\&hollnagel-JCS-ch1}. As operators, we are
+systems\cite[p. ??]{???-woodshollnagel-JCS-ch1}. As operators, we are
 sources of both success and failure. But ultimate, as Woods and
 Hollnagel point out, all cognitive systems are finite and will
 therefore also have errors, lapses, and
