--- a/intro.tex
+++ b/intro.tex
@@ -513,32 +513,44 @@ quandaries---driverless car ``trolley problems''---question how
 autonomous machines will respond to unusual situations and whether
 people will accept those responses. Would american freedom rhetoric
 allow the outlawing of human drivers \cite{???-http://www.washingtonpost.com/blogs/wonkblog/wp/2015/03/18/should-we-outlaw-human-drivers-in-a-world-of-driverless-cars/}? 
-Perhaps not. 
---would we accept a computer that kills 3000 to save 30000 that we
->kill?
---http://www.businessinsider.com/bill-gurley-is-skeptical-of-driverless-cars-2015-3
---http://www.washingtonpost.com/blogs/innovations/wp/2015/03/16/driverless-cars-a-tremendous-innovation-with-a-glaring-achilles-heel/
-And soundbites from very respected autonomy researchers are used to
-support this view: notably John Leonard, one of the researchers who
-worked on MIT's entrant to the DARPA Urban Challenge\cite{???}.
+Perhaps not. Would we accept a computerized device that kills ``3,300
+Americans'' per year, but replaces the ``roughly 33,000 lives a year
+that perish on U.S. roads as a result of human
+error''\cite{???-http://www.washingtonpost.com/blogs/innovations/wp/2015/03/16/driverless-cars-a-tremendous-innovation-with-a-glaring-achilles-heel/}?
+This is a difficult empirical question about the propensity of people
+to want to have a recognizable site for blame, and the tolerance of
+human beings for computer error. Among others, Bill Gurley, an Uber
+investor interviewed because of his connection to companies engaged in
+driverless vehicle research, believes that the reliability requirement
+for these systems---''four nines,'' as he describes it---given the
+catastrophic potential for errors renders the technology ``a long way
+off''\cite{???--http://www.businessinsider.com/bill-gurley-is-skeptical-of-driverless-cars-2015-3}.
+Even statements from very respected autonomy researchers are used to
+support this view: John Leonard, notable as one of the researchers who
+worked on MIT's entrant to the DARPA Urban Challenge in 2007, has gone
+on the record multiple times about his doubts, and has become a very
+public face for driverless car skepticism\cite{???-gomes}.
 
-excused for thinking this was just an argument between the
-technophiles and naysayers, the daring dreamers versus the
-conservative pragmatists. But there is much more to the story.
-Both popular visions of this technology focus on the future, and do
-relatively little to investigate the past or present, how we got to
+From all this, one would be excused for thinking this was just an
+argument between the technophiles and the naysayers, the daring dreamers versus the
+conservative pragmatists. But there is much more to the story than is
+apparent in this simplistic narrative. Both popular visions of this
+technology focus on the future, and do relatively little to
+investigate the past or present, how we got to 
 where we are now, or even what level of autonomy we currently see in
-our vehicles. 
-HOWEVER, few people seem to dispute what the object is that is
->being discussed, or how else it might look. both these narratives
->tend to take a particular technological picture and either support it
->or illustrate its problems
->idea that ''if you are asked to take control, we've failed'' as a
-culture of developers, more than just a risk-mitigation strategy (as
-we will see, this view doesn't necessarily hold together given
-historical examples)
+our vehicles. And few people seem to dispute what the object is that is
+being discussed, or how else it might look.\footnote{Though it should
+  be said that John Leonard, for example, has much more nuanced views
+  on the subject than get represented in these narratives.} Both these narratives 
+tend to take a particular technological picture and either support it
+or illustrate its problems, without challenging that fundamental
+picture. The idea that ''if you are asked to take control, we've
+failed'' has become deeply ingrained in our development
+culture, more than just as a risk-mitigation strategy but as a guiding
+ideology But as we will see, this view doesn't necessarily hold together given
+historical examples.
 
-however, the nature of the self-driving car as it will appear in
+However, the nature of the self-driving car as it will appear in
 the near future is not self-evident, no matter how loud Google's voice
 or how large their investment.
 
