--- a/intro.tex
+++ b/intro.tex
@@ -550,22 +550,27 @@ culture, more than just as a risk-mitigation strategy but as a guiding
 ideology But as we will see, this view doesn't necessarily hold together given
 historical examples.
 
-However, the nature of the self-driving car as it will appear in
-the near future is not self-evident, no matter how loud Google's voice
-or how large their investment.
-
 %---The future doesn't look like we think it does, pull material from
 %CMS801 final paper! 
+%3) and shift to the lead-in to the main thesis sections: 
 
-3) and shift to the lead-in to the main thesis sections: 
-these technologies or visions of them enact certain ideologically charged
-activities (through their epistemologies; or even to some extent
-ontological position of a self-driving car that ``knows'' nothing);
-and that these can be traced through the histories and current
-discourses of the fields involved, and might lead us to expect very
-different social/cultural impacts (2 p)
+%%TODO consider: ; or even to some extent ontological position of a
+%%self-driving car that ``knows'' nothing 
 
-KEY QUESTIONS: 
+However, the nature of the self-driving car as it will appear in
+the near future is not self-evident, no matter how loud Google's voice
+or how large their investment. These technologies and visions of them
+enact certain ideologically charged activities---such as supporting
+particularly research agendas---and these can be traced through the
+histories and current discourses of the fields involved.
+The particular epistemologies of the research fields that contribute
+to this vision greatly affect what is considered, and valued, and
+pushed forward. And recognizing the ideological charges behind this
+work, and examining alternatives, might lead us to expect a very
+different technology with very
+different social and cultural impacts. 
+
+KEY QUESTIONS:
 1) What are the stories we are hearing? 
 2) Where do they come from?
 3) What are the stakes for these stories?
