slight intro edits

--- a/intro.tex
+++ b/intro.tex
@@ -570,6 +570,7 @@ work, and examining alternatives, might lead us to expect a very
 different technology with very
 different social and cultural impacts. 
 
+This thesis is organized around five key questions
 KEY QUESTIONS:
 1) What are the stories we are hearing? 
 2) Where do they come from?
@@ -582,6 +583,12 @@ Fundamentally:
 **What can I disprove?
 I can disprove that this conventional story is right, true, and the
 only story to tell.**
+Ultimately, I argue that the narrative of self-driving cars, as
+generally conceived, is far narrower than history suggests it should
+be. A broader view of this narrative shows a different side of
+automated vehicles that is more hybrid, more complex, and presents
+very different questions for policymakers, engineers, designers, and
+the public. 
 
 %% Note: I need more voices from actual modern driverless car research
 %% papers, though looking at the Dickmanns ones more is a good idea! need
