first draft of introduction is done'

--- a/chap1.tex
+++ b/chap1.tex
@@ -54,7 +54,10 @@ the market and readership needs of news organizations to the pervasive
 culture of commodity scientism.\cite{smithSelling} The
 reasons for why these stories take a particular form may be innumerable
 and difficult to pin down, in general. But specifically regarding the ways that
-driverless cars are figured in the press as autonomous machines, there
+driverless cars are figured in the press as autonomous
+machines---that the only image of the technology that bears
+investigation is that of fully self-driving vehicles, an imagined
+technological peak---there
 are a number of identifiable sources for these ideological slants and
 modes of rhetoric: science fiction, factory automation history,
 artificial intelligence, and current engineering and policy documents. Some of
