--- a/intro.tex
+++ b/intro.tex
@@ -570,20 +570,67 @@ work, and examining alternatives, might lead us to expect a very
 different technology with very
 different social and cultural impacts. 
 
-This thesis is organized around five key questions
-KEY QUESTIONS:
-1) What are the stories we are hearing? 
-2) Where do they come from?
-3) What are the stakes for these stories?
-4) What are other ones out there, why aren't they so heard? and 
-5) Where do we go from here? What understandings need to change to
-make the broader picture comprehensible?
+%% 1) What are the stories we are hearing? 
+%% 2) Where do they come from?
+%% 3) What are the stakes for these stories?
+%% 4) What are other ones out there, why aren't they so heard? and 
+%% 5) Where do we go from here? What understandings need to change to
+%% make the broader picture comprehensible?
 
-Fundamentally:
-**What can I disprove?
-I can disprove that this conventional story is right, true, and the
-only story to tell.**
-Ultimately, I argue that the narrative of self-driving cars, as
+%TODO alter the end of this if the conclusion becomes two chapters
+
+This thesis is organized around several key questions. First, what are
+the dominant narratives around self-driving vehicles and where do they
+come from? Between the introduction, and chapter \ref{chap1}, I
+examine both the media's representation of self-driving vehicles and
+the sources of the idea, common both among the media and among
+self-driving vehicle researchers, that complete vehicle autonomy is
+the only future vision worth discussing and investigating. Second,
+what are the stakes of telling this kind of story? In chapter
+\ref{chap2} I describe some of the technologies involved in
+automation, and the fields with which visions of full automation are
+intertwined: computer vision, urban planning, machine ethics, and
+others. Taking the popular narrative at face value presents the
+possibility of certain kinds of futures---with important
+disadvantages---while foreclosing on others in ways that are important
+to examine. Third, what other potential narratives for automation, and
+particularly vehicle automation, exist? In chapter \ref{chap3} I
+examine an alternative paradigm for thinking about automation, looking
+both at some of the literature in the field of human supervisory
+control and historical examples from other regimes of automation that
+make the case for why supervisory control is an acceptable---and in
+many ways, more apt---alternative for considering what automation is
+and does. But, as I describe, supervisory control presents a very
+different read on what automation means and where it is headed in the
+future, which leads to the possibility of different futures, with
+different stakes and trade-offs. Finally, where can we go, as a
+culture, from this realization? What understandings need to change to
+make this picture more broadly comprehensible? And what should it mean
+for policy? While this is a broad topic, itself worthy of a thesis, I
+argue in chapter \ref{concl}, the conclusion, that the contrast
+between the rhetorics of artificial intelligence and supervisory
+control, which really describe many of the same artifacts, points the
+way. A broader appreciation for our hybrid lives, our hybrid
+engagements with machines, can alter public opinion and policy in
+productive ways. This appreciation allows us to shift the fundamental
+questions we ask about technology in a way that is, hopefully, as
+productive for others as it was for this thesis.
+
+Fundamentally, I am a scientist at heart,\footnote{I mean this not necessarily in
+  the methods of what is considered modern, experimental science,
+  which does not fit easily within the realms of historical critique,
+  but in terms of ethos, and some notion of falsifiability.} and I seek to approach my
+work in that light. What idea, or hypothesis, does this thesis attempt
+to disprove? While I say many things that have significant backing,
+though they may not themselves be provable\footnote{I hope they are,
+  convincing, or at least suggestive.} in any real sense, my core case
+is that there is more than one story to tell about road vehicle
+automation.\footnotemark One can argue about approaches to automation and autonomy,
+based on historical examples, empirical data, or ethnographic
+examples, but the idea that the conventional story about automation
+(that it is clearly and naturally headed toward completeness and
+totality) is right, true, and the only story to tell is clearly
+without basis. Ultimately, I argue that the narrative of self-driving cars, as
 generally conceived, is far narrower than history suggests it should
 be. A broader view of this narrative shows a different side of
 automated vehicles that is more hybrid, more complex, and presents
@@ -594,7 +641,7 @@ the public.
 %% papers, though looking at the Dickmanns ones more is a good idea! need
 %% a section specifically on how the ideologies come through!
 
-Note: I set out to plumb the depths of the cultural and social
+\footnotetext{ I set out to plumb the depths of the cultural and social
 implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
 conceived of driverless cars as just-another-AI-technology, something
 understood and on which a meaningful ideological critique could be
@@ -630,4 +677,4 @@ vehicles are common, but moreso investigates what different models for these veh
 exist, and what their public face might be if different people wrote,
 and different ideas guided, their stories. Stories have power, and it
 beehoves me, on finding the stories we tell to be so deeply one-sided,
-to try to rebalance the narrative.
+to try to rebalance the narrative.}
