added chapter 4 as an appendix, altered conclusion

--- a/chap1.tex
+++ b/chap1.tex
@@ -1560,7 +1560,7 @@ not ``and therefore will not''\footnote{Attention and task hand-over are
   known issues in aircraft automation, as prolonged inattention leaves
   pilots ill-positioned to regain control of systems when necessary
   (see for example the events leading up to the Air France 447
-  crash). This will be a particular focus in \ref{chap3}} continuously
+  crash). This will be a particular focus in \ref{chap:3}} continuously
 monitor the environment.\cite[p. 9]{SAE} But their 
 picture is still binary, rather than considering the moment-to-moment
 distribution of human 
