--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,7 @@
-\chapter{Introduction}
+\chapter{Introduction: Driverless Dreams}
 \label{chap:1}
 
-Intro / Visions / Public Faces (14 p)
+%Intro / Visions / Public Faces (14 p)
 
 It is early August, 1925, and a strange spectacle greets viewers on
 Broadway in New York City. An empty car lurches uncertainly down the
@@ -26,7 +26,7 @@ built the ``Linrrican Wonder'' from a 1926 Chandler, and demonstrated
 it live, on the streets of New York City. But it would be wrong to
 characterize a 90-year engineering journey as the continual
 progression toward a ``modern,'' developed device. There is nothing
-fundamentally natural about the way automated--or, often interchangeably
+fundamentally natural about the way automated---or, often interchangeably
 ``autonomous,'' ``driverless,'' or ``self-driving''\footnote{I indeed use these terms
   interchangeably at times even within this text, but I should mention
 the specifics of their use here. Autonomous, driverless, and self-driving
@@ -40,7 +40,7 @@ have become increasingly automated over the past 50 years (through
 ABS, traction control, cruise control, automatic transmissions, etc.) without, so
 far at least, becoming autonomous. This point, simple though it
 sounds, is at the center of this thesis and is specifically the focus
-of chapter \ref{chap3}.}---vehicles are being
+of chapter \ref{chap:3}.}---vehicles are being
 envisioned, designed, and talked about. Instead, automated vehicle
 development has sustained several successive, overlapping paradigms,
 in part, though not completely driven by the technical capabilities
@@ -81,7 +81,7 @@ collective future. We are famously bad at these predictions\cite{???} but they
 nevertheless drive the popular imaginary, which has included automated
 vehicles since the 1920s, and other types of automation for hundreds
 of years previous\footnote{For more on this, see chapter
-  \ref{chap1}.}. Both visions of and research on self-driving
+  \ref{chap:1}.}. Both visions of and research on self-driving
 technology have taken on aspects of the central information
 technologies of their day, and re-inscribed them as control
 technologies for physical devices.
@@ -411,11 +411,11 @@ achieve full self-driving at once. Automated\footnote{I use ``automated''
   levels here: Under what circumstances can it be self-driving? Is
   complete self-driving capability necessary before the term applies?
   These questions will return again and again through this thesis,
-  especially in chapters \ref{chap1} and \ref{chap3}. }---or even
+  especially in chapters \ref{chap:1} and \ref{chap:3}. }---or even
 ``self-driving''---vehicles are not just one, uniform type of
 thing. And, critically, there is no clear
 line to be drawn between their extremes, as we will see in chapter
-\ref{chap3}. 
+\ref{chap:3}. 
 
 
 %% >>>Story hook: currently, this calls out to be a brief historical
@@ -438,7 +438,7 @@ portrayal of self-driving technology is not often very nuanced. While
 there is a fair amount of popular argument about whether these
 vehicles will be beneficial (or how beneficial they will be) along
 various axes of interest, there is relatively little discussion of
-what these vehicles will actually be---outside of discussions of
+\emph{what} these vehicles will actually be---outside of discussions of
 Google's desire to eliminate steering wheels facing off against
 regulators, or questions of whether the automakers' gradual approach
 or Google's ``moonshot'' approach will triumph: the implicit
@@ -464,8 +464,8 @@ other parts of life. Compared to America's Electric Light and Power
 Companies' ad from the 1950s, where the car was a space for idyllic,
 family life, what we think we will use these prospective vehicles for
 has changed to the point where productivity is the stated or unstated
-goal. Our assumptions have changed with relatively little
-investigation into why, but continue to be the background of both
+goal. Our assumptions about use have changed (with seemingly little
+investigation into why), but they continue to be the background of both
 optimistic and pessimistic viewpoints.
 
 One popular vision of this technology is fundamentally optimistic: it
@@ -489,7 +489,13 @@ eldest son can get his license\cite{???-GomesHidden}), and expects
 these vehicles not to have steering wheels or the possibility of human
 control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
-alone---but is implied in these kinds of statements. Elon Musk expects
+alone---but is implied in these kinds of statements. 
+
+Tesla & forthcoming ``autopilot'' mode, which explicitly involved aircraft
+discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
+http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?_r=0&referrer=
+
+Elon Musk expects
 that once sufficiently capable vehicles 
 come to market, human drivers may be
 outlawed.\cite{???-http://www.forbes.com/sites/leoking/2015/03/19/googles-gargantuan-push-for-cars-with-no-steering-wheel-by-2020/}.
@@ -505,8 +511,9 @@ everyone needs to get out of the way''
 %% ---but this is a flawed picture of the future, and an incomplete
 %% picture of the tech
 
-However, another common viewpoint is that there are big problems to be
-solved, and the technology isn't ready yet, whatever Urmson and Google
+However, another common viewpoint is that there are major problems remaining to be
+solved, and that the technology is not yet ready for
+commercialization, whatever Urmson and Google 
 say. Questions of safety, legality, and insurance cast doubts on this
 sort of optimistic timescale. Moral and ethical
 quandaries---driverless car ``trolley problems''---question how
@@ -542,12 +549,12 @@ our vehicles. And few people seem to dispute what the object is that is
 being discussed, or how else it might look.\footnote{Though it should
   be said that John Leonard, for example, has much more nuanced views
   on the subject than get represented in these narratives.} Both these narratives 
-tend to take a particular technological picture and either support it
+tend to take a certain possible future of technology and either support it
 or illustrate its problems, without challenging that fundamental
 picture. The idea that ''if you are asked to take control, we've
 failed'' has become deeply ingrained in our development
 culture, more than just as a risk-mitigation strategy but as a guiding
-ideology But as we will see, this view doesn't necessarily hold together given
+ideology But as we will see, this view does not necessarily hold together given
 historical examples.
 
 %---The future doesn't look like we think it does, pull material from
@@ -581,23 +588,27 @@ different social and cultural impacts.
 
 This thesis is organized around several key questions. First, what are
 the dominant narratives around self-driving vehicles and where do they
-come from? Between the introduction, and chapter \ref{chap1}, I
+come from? Between the introduction, and chapter \ref{chap:1}, I
 examine both the media's representation of self-driving vehicles and
 the sources of the idea, common both among the media and among
 self-driving vehicle researchers, that complete vehicle autonomy is
 the only future vision worth discussing and investigating. Second,
 what are the stakes of telling this kind of story? In chapter
-\ref{chap2} I describe some of the technologies involved in
+\ref{chap:2} I describe some of the technologies involved in
 automation, and the fields with which visions of full automation are
 intertwined: computer vision, urban planning, machine ethics, and
 others. Taking the popular narrative at face value presents the
 possibility of certain kinds of futures---with important
-disadvantages---while foreclosing on others in ways that are important
-to examine. Third, what other potential narratives for automation, and
-particularly vehicle automation, exist? In chapter \ref{chap3} I
+disadvantages---while foreclosing on others in ways that must be
+carefully examined. I argue that adding autonomy to cars does not,
+alone, solve any social problems. Successfully addressing social
+issues requires careful design at a whole-system level, involving
+people, vehicles, and infrastructure. Third, what other potential
+narratives for automation,
+particularly vehicle automation, exist? In chapter \ref{chap:3} I
 examine an alternative paradigm for thinking about automation, looking
 both at some of the literature in the field of human supervisory
-control and historical examples from other regimes of automation that
+control, and historical examples from other regimes of automation that
 make the case for why supervisory control is an acceptable---and in
 many ways, more apt---alternative for considering what automation is
 and does. But, as I describe, supervisory control presents a very
@@ -607,11 +618,14 @@ different stakes and trade-offs. Finally, where can we go, as a
 culture, from this realization? What understandings need to change to
 make this picture more broadly comprehensible? And what should it mean
 for policy? While this is a broad topic, itself worthy of a thesis, I
-argue in chapter \ref{concl}, the conclusion, that the contrast
+argue in the conclusion\footnote{For more about hybridity and cyborgs,
+and about the ways the street has previously been re-shaped by vehicle
+technologies, see the appendix.} that the contrasts
 between the rhetorics of artificial intelligence and supervisory
-control, which really describe many of the same artifacts, points the
+control, which really describe many of the same artifacts, point the
 way. A broader appreciation for our hybrid lives, our hybrid
-engagements with machines, can alter public opinion and policy in
+engagements with machines---human beings as cyborgs---can alter public
+opinion and policy in
 productive ways. This appreciation allows us to shift the fundamental
 questions we ask about technology in a way that is, hopefully, as
 productive for others as it was for this thesis.
@@ -627,7 +641,7 @@ though they may not themselves be provable\footnote{I hope they are,
 is that there is more than one story to tell about road vehicle
 automation.\footnotemark One can argue about approaches to automation and autonomy,
 based on historical examples, empirical data, or ethnographic
-examples, but the idea that the conventional story about automation
+findings, but the idea that the conventional story about automation
 (that it is clearly and naturally headed toward completeness and
 totality) is right, true, and the only story to tell is clearly
 without basis. Ultimately, I argue that the narrative of self-driving cars, as
@@ -641,7 +655,7 @@ the public.
 %% papers, though looking at the Dickmanns ones more is a good idea! need
 %% a section specifically on how the ideologies come through!
 
-\footnotetext{ I set out to plumb the depths of the cultural and social
+\footnotetext{I set out to critically examine the cultural and social
 implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
 conceived of driverless cars as just-another-AI-technology, something
 understood and on which a meaningful ideological critique could be
