--- a/concl.tex
+++ b/concl.tex
@@ -1,71 +1,6 @@
-\chapter{Where To?}
+\chapter{Conclusion: Driving the Future}
 
-5. Where to?
--new epistemology?
--orienting toward the right questions?
--???
-
-Impacts / New Epistemologies (21 p)
-
-Somewhere in here:
-bring in the qualitative observations of actually driving, the
-components we interact with on a daily basis
-Our cars are already complex human/machine systems, and it is time our
-viewpoint shifts to begin to recognize this fact; this is not a move
-from total human operation to total machine operation, and therefore
-from total human agency to total machine agency, but a change in the
-blend of capacities and the technologies involved in getting there.
-
-
-
->>>This is where I weave in automotive history 
->>>Return to streetcar and the re-shaping of public space: 
-
-1) process by which new technologies become entwined with new legal
-principles; new epistemologies?
--historical example (3 p)
--what is the new epistemology needed to make sense of devices like
-this in the everyday (because we haven't seen them outside of extreme
-environments, except in very weak forms)
-
--the street stands to be re-shaped again, subtly, by the capabilities
-of our vehicles (1 p)
-http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history
-http://www.vox.com/2015/1/15/7551873/jaywalking-history
-
--this is the place to bring together the AI, Human Factors,
-Law/Policy, and STS/Anthro background (specifically on technology \&
-people, edges of HCI, Andy Clark on natural-born cyborgs) to paint the
-whole picture of the forces in play (2 p, v. philosophical)
-
-http://boingboing.net/2015/03/10/philip-k-dicks-androids-blu.html
-
-2) VERY different potential impacts if we are looking at fully
-autonomous vs. partially autonomous 
---in terms of human role and our understanding of our own role
-----referring back to HF/SC (3 p)
---in terms of how the road itself may have to change (not going to
-spend a lot of time on this, but it is worth at least a couple
-paragraphs) (2 p)
---in terms of legal framework
-----it is important to note that ``responsibility'' is not binary
-(which is made clear in these examples), and torts may be distributed
-across human and nonhuman actors (operator, owner, seller,
-manufacturer, distributors) but distribution of torts has an ethical
-and ideological stance (2 p)
->>>>BUT: problems with the liability framework: expensive for the
-litigant to get expert witnesses; harder to determine whose fault it
-is and the human tends to get scapegoated (see industrial accidents,
-TMI, or oil rig disasters) (3 p)
->>>>>What can we actually ask the human to do and hold them to task
-for? (3 p)
----important to note that issues of litigation for full autonomy are
-not even part of the debate yet, we just aren't at the stage where it
-is worth discussing (2 p)
-
---------------------
-
-Resisting Teleology / Conclusion (14 p)
+%%Resisting Teleology / Conclusion (14 p)
 
 1) what should be clear from the above, but must be made clear in
 public discourse, is that human->hybrid->autonomous is not inevitable,
@@ -83,10 +18,10 @@ media
 >>> possibly split up <<<
 
 
-
-
 Conclusion:
 Can't get positive social effects by just adding autonomy!
+2) VERY different potential impacts if we are looking at fully
+autonomous vs. partially autonomous 
 
 The pro-side: millions of deaths if we don't do something now, so we
 have to accept these
@@ -119,6 +54,9 @@ that choice.
 (Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
 lives''?
 there may be hidden consequences to a philosophy of saving more lives)
+
+{Dumit, companies unlikely to back a system that will result in fewer
+  cars on the road; just against their economic interests)
 
 
 EDIT THE BELOW
