--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@ process all files:}
 \include{chap3}
 \include{concl}
 \appendix
+\include{chap4}
 %\include{appa}
 %\include{appb}
 \include{biblio}
