appendices added, pontification complete

--- a/intro.tex
+++ b/intro.tex
@@ -491,9 +491,9 @@ control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
 alone---but is implied in these kinds of statements. 
 
-Tesla & forthcoming ``autopilot'' mode, which explicitly involved aircraft
+Tesla and forthcoming ``autopilot'' mode, which explicitly involved aircraft
 discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
-http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?_r=0&referrer=
+http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?\_r=0\&referrer=
 
 Elon Musk expects
 that once sufficiently capable vehicles 
