--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@ process all files:}
 \include{concl}
 \appendix
 \include{chap4}
+\include{chap5}
 %\include{appa}
 %\include{appb}
 \include{biblio}
